# R_links

./: .gitignore  AGENTS.md  CHANGELOG  CHANGELOG.md  README.md  R_Link_Installer_GUI.py  R_Link_Installer_修复记录-202604081522.md  R_Link_Installer_功能增强记录-202604081524.md  R_Link_Installer_功能实现内容-202604081520.md  R包搜索及定位优化记录-202605021810.md  R包搜索稳定性及多源支持优化记录-202605121515.md  UI交互优化记录-202604101452.md  apply_font_vars.js  build_exe.bat  build_exe.ps1  fix_fonts.js  packageVersion纯净化修复记录-202604101526.md  packageVersion逻辑修正记录-202604101522.md  update_font.js  修复启动失败-202604101430.md  手工选择修复记录-202604101511.md  脚本格式优化记录-202604101448.md
.github/workflows/: ci.yml  release.yml
mod_UI/: 20260709_fix_github_subdir.md  README.md  fix_app_test.cjs  fix_clip.cjs  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
mod_UI/src/: App.css  App.test.tsx  App.tsx  HistoryView.test.tsx  HistoryView.tsx  ReportView.test.tsx  ReportView.tsx  SettingsView.test.tsx  SettingsView.tsx  WorkspaceView.test.tsx  WorkspaceView.tsx  components.tsx  types.ts  useHistory.test.ts  useHistory.ts  useSearch.test.ts  useSearch.ts  useSettings.test.ts  useSettings.ts  utils.test.ts  utils.ts
mod_UI/src-tauri/: Cargo.toml  tauri.conf.json
mod_UI/src-tauri/capabilities/: default.json
mod_UI/src-tauri/src/: dependency.rs  lib.rs  logic.rs  main.rs  models.rs  search.rs  search_sanitize.rs  search_urls.rs  secrets.rs  storage.rs
mod_UI/src-tauri/windows/nsis/: SimpChinese.nsh
mod_UI/src-tauri/windows/wix/: zh-CN.wxl
报告/: build_exe.ps1
报告/ai_codes/: app_review.res  (+3 more)
(+74 files in other folders)
