[package]
name = "mod_ui"
version = "0.1.4"
description = "R 包安装命令工作台"
authors = ["R Links"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mod_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
tauri = { version = "=2.11.2", features = [] }
tauri-plugin-clipboard-manager = "=2.3.2"
tauri-plugin-opener = "=2.5.4"
futures-util = "=0.3.31"
regex = "=1.12.4"
reqwest = { version = "=0.13.4", default-features = false, features = ["json", "rustls", "socks"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.52.3", features = ["macros", "time"] }
url = "=2.5.8"
urlencoding = "=2.1.3"
base64 = "=0.22.1"
windows-sys = { version = "=0.61.2", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_Storage_FileSystem"] }
tauri-plugin-updater = "2.10.1"
